--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
+    "@leecheuk/react-google-login": "^5.4.1",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.5",
     "@reduxjs/toolkit": "^1.8.5",
@@ -16,6 +17,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "axios": "^0.27.2",
+    "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
