--- a/client/package.json
+++ b/client/package.json
@@ -5,9 +5,9 @@
   "dependencies": {
     "@emotion/react": "^11.10.4",
     "@emotion/styled": "^11.10.4",
-    "@leecheuk/react-google-login": "^5.4.1",
     "@mui/icons-material": "^5.10.6",
     "@mui/material": "^5.10.5",
+    "@react-oauth/google": "^0.2.8",
     "@reduxjs/toolkit": "^1.8.5",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -23,6 +23,7 @@
     "react-dom": "^18.2.0",
     "react-file-base64": "^1.0.3",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "tss-react": "^4.1.3",
     "typescript": "^4.8.3",
@@ -51,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "^2.7.1"
   }
 }
